bugfixing on dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,7 @@ body {
   * {
     @apply border-border;
   }
-  body {
+  #dark-mode-provider {
     @apply bg-background text-foreground;
   }
 }
